# julia_PS1

./: CMakeLists.txt  Makefile  bitmap.c  job.pbs  julia  juliaJob.slurm  julia_mpi.c  julia_mpi.h
